photoprism/06_deployment_photoprism.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism-deployment
  namespace: photoprism
spec:
  replicas: 1
  selector:
    matchLabels:
      app: photoprism
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
        - name: photoprism
          image: photoprism/photoprism:latest
          ports:
            - containerPort: 2342
          livenessProbe:
            httpGet:
              path: /
              port: 2342
          readinessProbe:
            httpGet:
              path: /
              port: 2342
          resources:
            limits:
              cpu: 8
              memory: 16Gi
            requests:
              cpu: 2
              memory: 4Gi
          volumeMounts:
            - mountPath: /photoprism/originals
              name: photoprism-originals
            - mountPath: /photoprism/storage
              name: photoprism
      restartPolicy: Always
      volumes:
        - name: photoprism-originals
          hostPath:
            path: /opt/photoprism/originals
            type: Directory
        - name: photoprism
          hostPath:
            path: /opt/photoprism/data
            type: Directory
