photoprism/04_service_mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism-db-service
  namespace: photoprism
spec:
  selector:
    app: photoprism-db
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
