photoprism/07_service_photoprism.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
spec:
  ports:
    - port: 2342
      targetPort: 2342
      protocol: TCP
  type: NodePort
  selector:
    app: photoprism
